# quizy

./: .gitignore  README.md  example_test.py  pyproject.toml  release.py  requirements.txt
.github/workflows/: pr-checks.yml  tests.yml
docs/: API.md  EXAMPLES.md  MCP_SETUP.md  QUESTION_TYPES.md
quizy/: __init__.py  ai_generator.py  cli.py  core.py  main.py  mcp_server.py  quiz_101.py  quiz_102.py
tests/: __init__.py  test_cli.py  test_core.py  test_main.py  test_questions.py
