[project]
name = "quizy"
version = "0.4.7"
description = "A simple, elegant Python framework for creating and running interactive quizzes"
authors = [
    { name="Rustam Karimov", email="karimov.rustam.live@gmail.com" }
]
dependencies =[
    "openai>=2.0.0",
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["quiz", "education", "learning", "interactive", "assessment", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rustampy/quizy"
Repository = "https://github.com/rustampy/quizy"
Documentation = "https://github.com/rustampy/quizy#readme"
"Bug Tracker" = "https://github.com/rustampy/quizy/issues"

[project.optional-dependencies]
openai = []
mcp = ["mcp>=1.24.0"]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0"]

[project.scripts]
quizy-mcp = "quizy.mcp_server:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["quizy"]